--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     width: 15vw;
     background-color: #4B9738;
     box-shadow: 0px 0px 14px rgba(53, 64, 82, 0.05);
